--- a/server/plugins/Terraria/Data/potionItem.yml
+++ b/server/plugins/Terraria/Data/potionItem.yml
@@ -20,7 +20,7 @@
 终极治疗药水:
     health: 600
 恢复药水:
-    health: 160
+    health: 175
     mana: 80
 弱效魔力药水:
     mana: 50
@@ -56,8 +56,8 @@
     maxMana: 50
 弹药储备药水:
     弹药储备: 9600
-箭术药水:
-    箭术: 9600
+射术药水:
+    射术: 9600
 战斗药水:
     战斗: 8400
 虫潮药水:
@@ -78,8 +78,8 @@
     生命力: 9600
 魔能药水:
     魔能: 4800
-魔力再生药水:
-    魔力再生: 9600
+魔力掌控药水:
+    魔力掌控: 9600
 黑曜石皮药水:
     黑曜石皮: 7200
 再生药水:
@@ -119,5 +119,5 @@
 苹果:
     吃饱: 6000
 星舰电池:
-    魔力再生: 4800
+    魔力掌控: 4800
     魔能: 4800
