--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1547,17 +1547,20 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a你获得六个宝石碎片；其中四个对应四个职业，还有一对基础宝石
+    - §a+130 潜行值上限
+    - §a你获得六个宝石碎片；其中五个对应五个职业，还有一颗基础宝石
     - §a受到伤害时，你会损失一个宝石
     - §a失去的宝石对应你上一次手持的武器所属职业（默认为近战宝石）
-    - §a如果你已经损失了该宝石，那么这次失去的将会是一颗基础宝石
+    - §a如果你已经损失了该宝石，那么这次失去的将会是基础宝石
     - §a破碎的宝石需要30秒来重新凝聚
-    - §a黄色宝石增加45%近战伤害，26%近战速度和12%近战暴击率
-    - §a绿色宝石增加50%远程伤害和16%远程暴击率
-    - §a紫色宝石给予50%魔法伤害和16%魔法暴击率；最大魔力值提升100
-    - §a蓝色宝石给予72%召唤伤害和6个召唤栏，并取消手持非召唤武器的召唤伤害降低惩罚
-    - §a红色基础宝石给予150防御和12%伤害减免；丢失基础宝石时优先丢失红色宝石
-    - §a粉色基础宝石给予40%飞行时间，8生命恢复和更长的受伤无敌帧
+    - §#EDAA2B黄色宝石增加45%近战伤害，26%近战速度和12%近战暴击率
+    - §#25BC6C绿色宝石增加50%远程伤害和16%远程暴击率
+    - §#E01800红色宝石给予50%盗贼伤害和16%盗贼暴击率
+    - §#C83AD1紫色宝石给予50%魔法伤害和16%魔法暴击率；最大魔力值提升100
+    - §#2577CE蓝色宝石给予30%召唤伤害和4个召唤栏，并取消手持非召唤武器的召唤伤害降低惩罚
+    - §#FF73CE粉色宝石给予150防御，12%伤害减免，40%飞行时间，6生命恢复和更长的受伤无敌帧
+    attributes:
+      stealthLimit: 130
   魔影套装:
     lore:
     - ''
