lizard temple & mob spawning & misc tweak
players would now revive sooner if the boss leaves;
lizard temple's maze greatly simplified;
mob spawning handling tweaked for temple;
unique entities now would endure for longer after each damage event;
monsters targeting players with higher game progression would not retarget to players with lower progression

--- a/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/server/plugins/Terraria/Data/mobSpawning.yml
@@ -1947,7 +1947,7 @@ mobInfo:
         name: "腐化囊"
         monsterType: "SLIME"
         slimeSize: 3
-        spawnLocationType: AIR
+        spawnLocationType: GROUND
         unique: true
         variants:
             default1:
