status meters' server-side impl
status meters, including stealth & defense damage

--- a/server/plugins/DragonCore/Gui/hud_hotbar.yml
+++ b/server/plugins/DragonCore/Gui/hud_hotbar.yml
@@ -1,4 +1,5 @@
 match: "hud"
+updateInterval: 50
 Functions:
   preRender: |-
     界面变量.inactive_size = 方法.取屏幕宽度() * 16 / 方法.取变量('adjusted_scr_size');
