stealth logic bugfix

--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1547,7 +1547,6 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a+130 潜行值上限
     - §a你获得六个宝石碎片；其中五个对应五个职业，还有一颗基础宝石
     - §a受到伤害时，你会损失一个宝石
     - §a失去的宝石对应你上一次手持的武器所属职业（默认为近战宝石）
@@ -1555,12 +1554,10 @@ sets:
     - §a破碎的宝石需要30秒来重新凝聚
     - §#EDAA2B黄色宝石增加45%近战伤害，26%近战速度和12%近战暴击率
     - §#25BC6C绿色宝石增加50%远程伤害和16%远程暴击率
-    - §#E01800红色宝石给予50%盗贼伤害和16%盗贼暴击率
+    - §#E01800红色宝石给予130潜行值上限，50%盗贼伤害和16%盗贼暴击率
     - §#C83AD1紫色宝石给予50%魔法伤害和16%魔法暴击率；最大魔力值提升100
     - §#2577CE蓝色宝石给予30%召唤伤害和4个召唤栏，并取消手持非召唤武器的召唤伤害降低惩罚
     - §#FF73CE粉色宝石给予150防御，12%伤害减免，40%飞行时间，6生命恢复和更长的受伤无敌帧
-    attributes:
-      stealthLimit: 130
   魔影套装:
     lore:
     - ''
